<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="runQualityViewModel"
            type="com.e.speedy.runQuality.RunQualityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".runQuality.RunQualityFragment">

        <TextView
            android:id="@+id/how_was_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/how_was_run"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/very_dissatisfied_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:contentDescription="@string/very_dissatisfied"
            android:onClick="@{() -> runQualityViewModel.onSetRunQuality(1)}"
            android:src="@drawable/very_dissatisfied"
            app:layout_constraintEnd_toStartOf="@+id/dissatisfied_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/how_was_textView" />

        <ImageView
            android:id="@+id/dissatisfied_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dissatisfied"
            android:onClick="@{() -> runQualityViewModel.onSetRunQuality(2)}"
            android:src="@drawable/dissatisfied"
            app:layout_constraintEnd_toStartOf="@+id/satisfied_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/very_dissatisfied_imageView"
            app:layout_constraintTop_toTopOf="@+id/very_dissatisfied_imageView" />

        <ImageView
            android:id="@+id/satisfied_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/satisfied"
            android:onClick="@{() -> runQualityViewModel.onSetRunQuality(3)}"
            android:src="@drawable/satisfied"
            app:layout_constraintEnd_toStartOf="@+id/very_satisfied_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dissatisfied_imageView"
            app:layout_constraintTop_toTopOf="@+id/dissatisfied_imageView" />

        <ImageView
            android:id="@+id/very_satisfied_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_margin"
            android:contentDescription="@string/very_satisfied"
            android:onClick="@{() -> runQualityViewModel.onSetRunQuality(4)}"
            android:src="@drawable/very_satisfied"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/satisfied_imageView"
            app:layout_constraintTop_toTopOf="@+id/satisfied_imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>