<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="runTrackerViewModel"
            type="com.e.speedy.runTracker.RunTrackerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".runTracker.RunTrackerFragment">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/start"
            android:onClick="@{() -> runTrackerViewModel.onStarTracking()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:enabled="@{runTrackerViewModel.startButtonVisible}"/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:text="@string/stop"
            android:onClick="@{() -> runTrackerViewModel.onStopTracking()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:enabled="@{runTrackerViewModel.stopButtonVisible}"/>

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/clear"
            android:onClick="@{() -> runTrackerViewModel.onClear()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="@{runTrackerViewModel.clearButtonVisible}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/clear_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_button">

            <TextView
                android:id="@+id/runTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@{runTrackerViewModel.allRunsString}" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>